--- a/design_unet_on_colab.ipynb
+++ b/design_unet_on_colab.ipynb
@@ -442,6 +442,66 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### original with BN, divisor=32, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=32 \\\n",
+    "    --dataset_dir_path=\"datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/keras_impl/original_with_BN_divisor32_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=64, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=64 \\\n",
+    "    --dataset_dir_path=\"datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/keras_impl/original_with_BN_divisor64_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## on SORTEO dataset"
    ],
    "metadata": {
@@ -747,6 +807,66 @@
     "    --epoch_num=20\n",
     "\n",
     "a=get_size('datasets/sorteo_pad_4/models/keras_impl/original_with_BN_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=32, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=32 \\\n",
+    "    --dataset_dir_path=\"datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/keras_impl/original_with_BN_divisor32_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=64, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/keras_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=64 \\\n",
+    "    --dataset_dir_path=\"datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/keras_impl/original_with_BN_divisor64_epoch20/saved_model')\n",
     "print('model size: %.2f'%a,'MiB')\n"
    ],
    "metadata": {
@@ -1160,6 +1280,66 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### original with BN, divisor=32, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=32 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/tf_impl/original_with_BN_divisor32_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=64, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=64 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/mri_pad_4\" \\\n",
+    "    --epoch_num=20\n",
+    "\n",
+    "a=get_size('datasets/mri_pad_4/models/tf_impl/original_with_BN_divisor64_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## on SORTEO dataset"
    ],
    "metadata": {
@@ -1467,6 +1647,68 @@
     "    --input_shape=[112,112,1]\n",
     "\n",
     "a=get_size('datasets/sorteo_pad_4/models/tf_impl/original_with_BN_divisor16_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=32, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=32 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20 \\\n",
+    "    --input_shape=[112,112,1]\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/tf_impl/original_with_BN_divisor32_epoch20/saved_model')\n",
+    "print('model size: %.2f'%a,'MiB')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### original with BN, divisor=64, epoch=20"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!python3 /content/GraduationProject/unet_constructing/tf_impl_run.py \\\n",
+    "    --structure=\"original_with_BN\" \\\n",
+    "    --divisor=64 \\\n",
+    "    --dataset_dir_path=\"/content/GraduationProject/datasets/sorteo_pad_4\" \\\n",
+    "    --epoch_num=20 \\\n",
+    "    --input_shape=[112,112,1]\n",
+    "\n",
+    "a=get_size('datasets/sorteo_pad_4/models/tf_impl/original_with_BN_divisor64_epoch20/saved_model')\n",
     "print('model size: %.2f'%a,'MiB')\n"
    ],
    "metadata": {
