docs(jupyter_notebooks): add notebooks;

--- a/jupyter_notebooks/PF_compress_improved_with_uniform-tf.ipynb
+++ b/jupyter_notebooks/PF_compress_improved_with_uniform-tf.ipynb
@@ -32,6 +32,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=1 \\\n",
@@ -114,6 +116,7 @@
   {
    "cell_type": "code",
    "source": [
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=2 \\\n",
@@ -197,6 +200,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=4 \\\n",
@@ -279,6 +283,7 @@
   {
    "cell_type": "code",
    "source": [
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=8 \\\n",
@@ -362,6 +367,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=16 \\\n",
@@ -443,6 +449,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=32 \\\n",
@@ -524,6 +531,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "os.chdir(\"/content/GraduationProject/module_pocketflow\")\n",
     "! ./scripts/run_local.sh compressing_with_PF/unet_run.py \\\n",
     "    --structure=improved \\\n",
     "    --divisor=64 \\\n",
