--- a/jupyter_notebooks/design_unet_on_colab.ipynb
+++ b/jupyter_notebooks/design_unet_on_colab.ipynb
@@ -81,15 +81,33 @@
     "!if [ ! -d \"./mri\" ]; then \\\n",
     "    tar -jxvf /content/GraduationProject/module_minc_keras/data/output.tar.bz2 -C ./ &> /dev/null && \\\n",
     "    mv output mri; \\\n",
-    "fi\n",
-    "\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "# download sorteo.tar.bz2 and make sorteo dataset\n",
     "!if [ ! -d \"./sorteo\" ]; then \\\n",
     "    wget https://amnesia.cbrain.mcgill.ca/deeplearning/sorteo.tar.bz2 --no-check-certificate && \\\n",
     "    mkdir sorteo && \\\n",
     "    tar -jxvf sorteo.tar.bz2 -C sorteo &> /dev/null; \\\n",
-    "fi\n",
-    "\n",
+    "fi"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "# prepare datasets\n",
     "os.chdir(\"/content/GraduationProject\")\n",
     "from data_processing.prepare_datasets import prepare_dataset\n",
@@ -100,7 +118,13 @@
     "from data_processing.convert_npy_to_tfrecords import convert_whole_dataset\n",
     "convert_whole_dataset(dataset_dir_path=\"datasets/mri_pad_4\")\n",
     "convert_whole_dataset(dataset_dir_path=\"datasets/sorteo_pad_4\")\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
